--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,13 @@
   <meta charset="utf-8">
   <title>AngularPwaIntroduction</title>
   <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="assets/css/animate.css">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
